# airflow_sandbox

./: .pylintrc  Dockerfile  README.md  pyproject.toml
.astro/: config.yaml
dags/: example_dag_advanced.py
