[tool.poetry]
name = "airflow-sandbox"
version = "0.1.0"
description = ""
authors = ["fontanads <fontanads@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.12"
apache-airflow = "^2.7.3"
apache-airflow-providers-google = "^10.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
